--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "use": "@vercel/node"
     },
     {
-      "src": "src/**/*", 
+      "src": "frontend/package.json", 
       "use": "@vercel/react"
     }
 
@@ -17,7 +17,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/src/$1"
+      "dest": "/frontend/$1"
     }
   ],
   "rewrites": [
@@ -28,7 +28,7 @@
     
     {
       "source": "/(.*)",
-      "destination": "/src/$1" 
+      "destination": "/frontend/$1" 
     }
   ]
 }
