--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,28 @@
-
+{
+  "builds": [
     {
-      "builds": [
-        {
-          "src": "api/api-server.js", 
-          "use": "@vercel/node"
-        },
-        {
-          "src": "frontend/package.json", 
-          "use": "@vercel/react"
-        }
-      ],
-      
-      "rewrites": [
-        {
-          "source": "/api/(.*)",
-          "destination": "/api/api-server.js"
-        },
-        {
-          "source": "/(.*)",
-          "destination": "/frontend/$1" 
-        }
-      ]
+      "src": "api/api-server.js", 
+      "use": "@vercel/node"
+    },
+    
+     
+    {
+      "src": "frontend/package.json",  
+      "use": "@vercel/static-build"  
     }
-       
+  ],
+  
+  "rewrites": [
+   
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/api-server.js"
+    },
+    
+  
+    {
+      "source": "/(.*)",
+      "destination": "/frontend/$1" 
+    }
+  ]
+}
